2008-06-22  Neal H. Walfield  <neal@gnu.org>

	* list.h (list_count) [! NDEBUG]: Don't check the length of the
	list in this case...
	[! NCHECK]: ... but in this case.

2008-06-22  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): In the implementation of
	object_discarded_clear, if CAP.TYPE is void, directly return
	ENOENT.

2008-06-22  Neal H. Walfield  <neal@gnu.org>

	* thread.h: Include "list.h".
	(struct thread) [! NDEBUG]: Add field futex_waiter_node.
	[! NDEBUG]: Instantiate the futex_waiter list class.
	(futex_waiters) [! NDEBUG]: Declare.
	* server.c (futex_waiters) [! NDEBUG]: New variable.
	(server_loop) [! NDEBUG]: If we don't get an RPC for a while,
	dequeue all thread's enqueued on FUTEX_WAITERS and return EDEADLK.
	When blocking a thread on a futex, add THREAD to FUTEX_WAITERS.
	* object.c (object_wait_queue_dequeue) [! NDEBUG]: If
	THREAD->WAIT_REASON is THREAD_WAIT_FUTEX, unlink THREAD from
	FUTEX_WAITERS.

2008-06-20  Neal H. Walfield  <neal@gnu.org>

	* profile.c: New file.
	* profile.h: Likewise.
	* Makefile.am (viengoos_SOURCES): Add profile.h and profile.c.
	* server.c: Include "profile.h".
	(PAGEFAULT_METHOD): Define.
	(server_loop): Add profiling code.

2008-06-20  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): If CAP_COPY_DISCARDABLE_SET or
	CAP_COPY_PRIORITY_SET is set, also update the object's policy,
	when appropriate.

2008-06-20  Neal H. Walfield  <neal@gnu.org>

	* ager.c: Include "pager.h".
	(ager_loop): Consider total available memory as not MEMORY_TOTAL
	but MEMORY_TOTAL - PAGER_LOW_WATER_MARK.  Improve debugging
	output.

2008-06-18  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): Implement the cap_rubout method.
	* rm.h (rm_method_id_string): Handle RM_cap_rubout.

2008-06-17  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): In the object_discarded_clear
	implementation, don't use cap_to_object, which ignores discarded
	object, to find the object but look it up manually.
